--- a/Qantar/App.config
+++ b/Qantar/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="QantarDB" connectionString="Data Source=IDEAPAD-SAV;Initial Catalog=QantarDB;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
