--- a/Qantar/Qantar.csproj
+++ b/Qantar/Qantar.csproj
@@ -61,6 +61,12 @@
     <Compile Include="FmAdd.Designer.cs">
       <DependentUpon>FmAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="FmAddUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FmAddUser.Designer.cs">
+      <DependentUpon>FmAddUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="FmHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FmAdd.resx">
       <DependentUpon>FmAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FmAddUser.resx">
+      <DependentUpon>FmAddUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FmHome.resx">
       <DependentUpon>FmHome.cs</DependentUpon>
@@ -170,6 +179,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Webp.net-resizeimage %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-contacts-26.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-home-26.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
